--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,69 +13,77 @@
     <link rel="stylesheet" type="text/css" href="style/style.css">
 
     <title>Presbyterian Advance Healthcare Planning </title>
-  </head>
-  <body>
-  <div class='container-fluid' id="logo-container">
-  <div class='row'>
-  <div class='col-sm-12'>
-  <img src='img/logo.png' class="img-fluid">
-</div><!-- end of col-sm-12-->
-</div> <!-- end of row -->
-</div><!-- end of container-fluid -->
-<div class="container nav-container">
-<div class='row nav-row '>
-  <div class='col-sm-7 nav-col'>
-    <ul class="nav">
-     <li class="nav-item">
-       <a class="nav-link active" href="#">Home</a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="mydocuments.html">My Documents</a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#">My Shared Circle</a>
-     </li>
-   </ul>
-  </div> <!-- end of col-sm-6 -->
-  <div class='col-sm-5 nav-col'>
-    <ul class="nav">
-     <li class="nav-item">
-       <a class="nav-link" href="#"><i class='fa fa-bell'></i>Support</a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#"><i class='fa fa-question-circle'></i>Faq <i class="fa fa-caret-down"></i></a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#" id="user"><i class='fa fa-user'></i>Jessica Jones<i class="fa fa-caret-down"></i></a>
-     </li>
-   </ul>
-  </div> <!-- end of col-sm-6 -->
-</div> <!-- end of row -->
-</div><!-- end of container-fluid -->
+</head>
 
-<div class="jumbotron jumbotron-fluid">
+<body>
+    <div class='container-fluid' id="logo-container">
+        <div class='row'>
+            <div class='col-sm-12'>
+                <img src='img/logo.png' class="img-fluid">
+            </div>
+            <!-- end of col-sm-12-->
+        </div>
+        <!-- end of row -->
+    </div>
+    <!-- end of container-fluid -->
+    <div class="container nav-container">
+        <div class='row nav-row '>
+            <div class='col-sm-7 nav-col'>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="mydocuments.html">My Documents</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">My Shared Circle</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- end of col-sm-6 -->
+            <div class='col-sm-5 nav-col'>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class='fa fa-bell'></i>Support</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class='fa fa-question-circle'></i>Faq <i class="fa fa-caret-down"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" id="user"><i class='fa fa-user'></i>Jessica Jones<i class="fa fa-caret-down"></i></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- end of col-sm-6 -->
+        </div>
+        <!-- end of row -->
+    </div>
+    <!-- end of container-fluid -->
+
+    <div class="jumbotron jumbotron-fluid">
   <div class="container white-overlay">
     <h3 class='heading'>Welcome to Your Advance Healthcare Planning</h3>
     <div class="row justify-content-center">
       <div class='col-sm-8 embed-responsive embed-responsive-16by9'>
     <h5 class='heading'>Welcome to Your Advance Healthcare Planning</h5>
- <iframe src='https://vimeo.com/showcase/5298492' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RVfiOgu23ks" allowfullscreen></iframe>
 </div><!-- end of col-sm-5 embed-responsive -->
-<div class="col-sm-9 p-div">
 <p>This process will help you share your healthcare needs and wishes with loved ones and healthcare providers, by keeping all your preferences documented in one place.</p>
 <p>A summary can be downloaded to your computer and sent to your healthcare providers and decision makers.
 We have provided links to explain some phrases and terminology, and you will be able to reach out to us along the way with any questions.</p>
 <p>Take your time and take care!</p>
-</div>
 <button type="button" class="btn btn-default btn-block">Let's Begin</button>
 </div><!-- end of row -->
   </div><!-- end of container white-overlay -->
 </div><!-- end of jumbotron -->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+</body>
+
 </html>
