changes by designer

--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
       <div class='col-sm-8 embed-responsive embed-responsive-16by9'>
     <h5 class='heading'>Welcome to Your Advance Healthcare Planning</h5>
   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RVfiOgu23ks" allowfullscreen></iframe>
-</div><!-- end of col-sm-5 embed-responsive -->
+</div><!-- end of col-sm-8 embed-responsive -->
+</div><!-- end of row -->
+<div class="row">
+  <div class="col-sm-12" id="index-text">
 <p>This process will help you share your healthcare needs and wishes with loved ones and healthcare providers, by keeping all your preferences documented in one place.</p>
 <p>A summary can be downloaded to your computer and sent to your healthcare providers and decision makers.
 We have provided links to explain some phrases and terminology, and you will be able to reach out to us along the way with any questions.</p>
 <p>Take your time and take care!</p>
-<button type="button" class="btn btn-default btn-block">Let's Begin</button>
+<button type="button" class="btn btn-default btn-block">Let's Begin<i class="fa fa-chevron-right pull-right"></i></button>
 </div><!-- end of row -->
   </div><!-- end of container white-overlay -->
 </div><!-- end of jumbotron -->
