--- a/yourplan1.html
+++ b/yourplan1.html
@@ -232,11 +232,11 @@
         <!-- end of main container row -->
         <div class="row">
             <div class="col-sm-4">
-                <button class="btn btn-default btn-block previous-button">Previous</button>
+              <button class="btn btn-default btn-block previous-button">Previous<i class="fa fa-chevron-left pull-left"></i></button>
             </div>
             <!-- end of col-sm-4 -->
             <div class="col-sm-8">
-                <button type="button" class="btn btn-default btn-block">Next</button>
+              <button type="button" class="btn btn-default btn-block">Next<i class="fa fa-chevron-right pull-right"></i></button>
             </div>
             <!-- end of -->
         </div>
@@ -244,7 +244,7 @@
         <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-5">
-                <button class="btn btn-default btn-block pull-right save-button">Save and Continue later</button>
+              <button class="btn btn-default btn-block pull-right save-button">Save and Continue later<i class="fa fa-chevron-right pull-right"></i></button>
                 <div class="col-sm-3"></div>
             </div>
             <!-- end of col-sm-12 -->
