--- a/yourplan3.html
+++ b/yourplan3.html
@@ -189,7 +189,7 @@
                         <h7 class='orange-heading'>If you choose something in-between, what does that look like for you?</h7>
                         <div class="row">
                             <div class="col-sm-12">
-                                <input type="text" class="form-control para-answer">
+                              <textarea class="form-control para-answer"></textarea>
                             </div>
                             <!-- end of col-sm-12 -->
                         </div>
@@ -208,7 +208,7 @@
                         <h7 class='orange-heading'>If you were to reach the point at which you could not care for yourself, where would you want to receive care?</h7>
                         <div class="row">
                             <div class="col-sm-12">
-                                <input type="text" class="form-control para-answer">
+                              <textarea class="form-control para-answer"></textarea>
                             </div>
                             <!-- end of col-sm-12 -->
                         </div>
@@ -227,7 +227,7 @@
                         <h7 class='orange-heading'>What else do you want your loved ones and healthcare team to know?</h7>
                         <div class="row">
                             <div class="col-sm-12">
-                                <input type="text" class="form-control para-answer">
+                              <textarea class="form-control para-answer"></textarea>
                             </div>
                             <!-- end of col-sm-12 -->
                         </div>
@@ -336,11 +336,11 @@
         <!-- end of row -->
         <div class="row">
             <div class="col-sm-4">
-                <button class="btn btn-default btn-block previous-button">Previous</button>
+              <button class="btn btn-default btn-block previous-button">Previous<i class="fa fa-chevron-left pull-left"></i></button>
             </div>
             <!-- end of col-sm-4 -->
             <div class="col-sm-8">
-                <button type="button" class="btn btn-default btn-block">Next</button>
+              <button type="button" class="btn btn-default btn-block">Next<i class="fa fa-chevron-right pull-right"></i></button>
             </div>
             <!-- end of -->
         </div>
@@ -348,7 +348,7 @@
         <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-5">
-                <button class="btn btn-default btn-block pull-right save-button">Save and Continue later</button>
+              <button class="btn btn-default btn-block pull-right save-button">Save and Continue later<i class="fa fa-chevron-right pull-right"></i></button>
                 <div class="col-sm-3"></div>
             </div>
             <!-- end of col-sm-12 -->
