--- a/yourvalues.html
+++ b/yourvalues.html
@@ -199,7 +199,7 @@
                         <h7 class='orange-heading'>If you choose an in-between point in Question 1 above, what does that look like for you?</h7>
                         <div class="row">
                             <div class="col-sm-12">
-                                <input type="text" class="form-control para-answer">
+                                <textarea class="form-control para-answer"></textarea>
                             </div>
                             <!-- end of col-sm-12 -->
                         </div>
@@ -218,7 +218,7 @@
                         <h7 class='orange-heading'>What other information or instructions do you want to share with your medical team?</h7>
                         <div class="row">
                             <div class="col-sm-12">
-                                <input type="text" class="form-control para-answer">
+                              <textarea class="form-control para-answer"></textarea>
                             </div>
                             <!-- end of col-sm-12 -->
                         </div>
@@ -237,7 +237,7 @@
                         <h7 class='orange-heading'>What matters to you about pain and symptom control?</h7>
                         <div class="row">
                             <div class="col-sm-12">
-                                <input type="text" class="form-control para-answer">
+                              <textarea class="form-control para-answer"></textarea>
                             </div>
                             <!-- end of col-sm-12 -->
                         </div>
@@ -269,7 +269,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <p>If yes, how should these practices be applied should you be near death?</p>
-                                <input type="text" class="form-control para-answer">
+                                <textarea class="form-control para-answer"></textarea>
                             </div>
                             <!-- end of col-sm-12 -->
                         </div>
@@ -350,11 +350,11 @@
         <!-- end of row -->
         <div class="row">
             <div class="col-sm-4">
-                <button class="btn btn-default btn-block previous-button">Previous</button>
+                <button class="btn btn-default btn-block previous-button">Previous<i class="fa fa-chevron-left pull-left"></i></button>
             </div>
             <!-- end of col-sm-4 -->
             <div class="col-sm-8">
-                <button type="button" class="btn btn-default btn-block">Next</button>
+              <button type="button" class="btn btn-default btn-block">Next<i class="fa fa-chevron-right pull-right"></i></button>
             </div>
             <!-- end of -->
         </div>
@@ -362,7 +362,7 @@
         <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-5">
-                <button class="btn btn-default btn-block pull-right save-button">Save and Continue later</button>
+                <button class="btn btn-default btn-block pull-right save-button">Save and Continue later<i class="fa fa-chevron-right pull-right"></i></button>
                 <div class="col-sm-3"></div>
             </div>
             <!-- end of col-sm-12 -->
