--- a/mydocuments(1).html
+++ b/mydocuments(1).html
@@ -463,7 +463,7 @@
                         <form class="form-inline">
                             <div class="form-group">
                                 <label for="additonallist" id="additionalnames-label">Please seperate additional names by commas:</label>
-                                <input type="text" class="form-control" id="additionalnames-input">
+                                <textarea class="form-control" id="additionalnames-input"></textarea>
                             </div>
                         </form>
                     </div>
@@ -1241,7 +1241,7 @@
                                 <form class="form-inline">
                                     <div class="form-group">
                                         <label for="limitationslist" id="limitationslist-label">Please list any specific limitations here:</label>
-                                        <input type="text" class="form-control" id="limitationslist">
+                                        <textarea class="form-control" id="limitationslist"></textarea>
                                     </div>
                                 </form>
                             </div>
@@ -1361,7 +1361,7 @@
         </div>
         <!-- end of main container row -->
 
-        <button type="button" class="btn btn-default btn-block" href="yourvalues.html">Next</button>
+        <button type="button" class="btn btn-default btn-block">Next<i class="fa fa-chevron-right pull-right"></i></button>
     </div>
     <!-- end of main container on page -->
 
