changes by designer - 2nd

--- a/mydocuments(2).html
+++ b/mydocuments(2).html
@@ -570,7 +570,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">6</strong>
                         </span>
-                        <h7 class='orange-heading'> Medical records: Are there people that you want to have access to your medical records after your death?</h7>
+                        <h7 class='orange-heading'> Medical records: Are there people that you want to have access to your medical records after<br><span class="newline"> your death?</span></h7>
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="form-check form-check-inline">
