--- a/myvalues(2).html
+++ b/myvalues(2).html
@@ -274,7 +274,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">6</strong>
                         </span>
-                        <h7 class='orange-heading'>Do you want your medical team or loved ones to attempt to notify your faith or spiritual center?</h7>
+                        <h7 class='orange-heading'>Do you want your medical team or loved ones to attempt to notify your faith or spiritual<br><span class="newline"> center?</span></h7>
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="form-check form-check-inline">
