--- a/yourplan2.html
+++ b/yourplan2.html
@@ -152,7 +152,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">1</strong>
                         </span>
-                        <h7 class='orange-heading'>Should you reach a point where it is likely you will not recover your ability to interact meaningfully with your family, friends, and environment, what would you want your medical team to do?</h7>
+                        <h7 class='orange-heading'>Should you reach a point where it is likely you will not recover your ability to interact <br><span class="newline">meaningfully with your family,</span> friends, and environment, what would you want your <br><span class="newline">medical team to do?</span></h7>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input" type="checkbox" id="Dochoice1" value="yes">
                             <label class="form-check-label" for="Dochoice1">Other than comfort care, I want to stop or withhold all treatments, that might be used to prolong my existence. Treatments I would not want if I were to reach this point include, but are not limited to, tube feeding, IV hydration, respirator/ventilation, and antibiotics.</label>
