--- a/yourplan3.html
+++ b/yourplan3.html
@@ -153,7 +153,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x"> 1 </strong>
                         </span>
-                        <h7 class='orange-heading'>If you were suffering from dementia, affecting your ability to make or share healthcare decisions, what would matter most to you?</h7>
+                        <h7 class='orange-heading'>If you were suffering from dementia, affecting your ability to make or share healthcare<br><span class="newline"> decisions, what would matter most to you?</span></h7>
                         <div class="row">
                             <div class="col-sm-12">
                                 <form class="range-field my-4 w-100">
@@ -205,7 +205,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">3</strong>
                         </span>
-                        <h7 class='orange-heading'>If you were to reach the point at which you could not care for yourself, where would you want to receive care?</h7>
+                        <h7 class='orange-heading'>If you were to reach the point at which you could not care for yourself, where would you want<br><span class="newline">to receive care?</span></h7>
                         <div class="row">
                             <div class="col-sm-12">
                               <textarea class="form-control para-answer"></textarea>
@@ -243,7 +243,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">5</strong>
                         </span>
-                        <h7 class='orange-heading'>Should you no longer be able to eat or swallow independently, would you want forced nutrition through a feeding tube?</h7>
+                        <h7 class='orange-heading'>Should you no longer be able to eat or swallow independently, would you want forced<br><span class="newline"> nutrition through a feeding tube?</span></h7>
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="form-check form-check-inline">
