--- a/mydocuments.html
+++ b/mydocuments.html
@@ -189,11 +189,9 @@
 
                             <div class="form-group">
                                 <label for="lastname">Last Name</label>
-                                <input type="text" class="form-control" id="lastname" style="width:65%">
-                              </div>
-                               <div class="form-group">
+                                <input type="text" class="form-control" id="lastname">
                                 <label for="address">Address</label>
-                                <input type="text" class="form-control"  style="width:65%">
+                                <input type="text" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label for="city">City</label>
@@ -580,8 +578,7 @@
                         <!-- a strong element with the custom content, in this case a number -->
                         <strong class="fa-stack-1x">6</strong>
                         </span>
-                        <h7 class='orange-heading'> Medical records: Are there people that you want to have access to your medical records after your death?</h7>
-
+                        <h7 class='orange-heading'> Medical records: Are there people that you want to have access to your medical records after<br><span class="newline"> your death?</span></h7>
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="form-check form-check-inline">
@@ -681,7 +678,7 @@
         </div>
         <!-- end of main container row -->
 
-        <button type="button" class="btn btn-default btn-block" href="yourvalues.html">Next</button>
+        <button type="button" class="btn btn-default btn-block">Next<i class="fa fa-chevron-right pull-right"></i></button>
     </div>
     <!-- end of main container on page -->
     <!-- Optional JavaScript -->
