--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <p>A summary can be downloaded to your computer and sent to your healthcare providers and decision makers.
 We have provided links to explain some phrases and terminology, and you will be able to reach out to us along the way with any questions.</p>
 <p>Take your time and take care!</p>
-<button type="button" class="btn btn-default btn-block">Let's Begin<i class="fa fa-chevron-right pull-right"></i></button>
+<button type="button" class="btn btn-default btn-block"><a href="https://kauress.github.io/healthcareplanning/mydocuments.html">Let's Begin</a><i class="fa fa-chevron-right pull-right"></i></button>
 </div><!-- end of row -->
   </div><!-- end of container white-overlay -->
 </div><!-- end of jumbotron -->
